[package]
name = "markdown-link-validator"
version = "0.1.0"
edition = "2018"
authors = ["James Hawley <developer@jrhawley.ca>"]
description = "Find all links in Markdown files and check that they exist."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
comrak = "0.10.1"
percent-encoding = "2.1.0"
termcolor = "1.1"
url = "2"
walkdir = "2.3.2"

[[bin]]
name = "mlv"
path = "src/main.rs"
