[package]
name = "link-validator"
version = "0.1.0"
edition = "2021"
authors = ["James Hawley <developer@jrhawley.ca>"]
description = "A CLI tool to find all links in Markdown files and check that they exist."

[dependencies]
clap = "2"
comrak = "0.10.1"
percent-encoding = "2.1.0"
termcolor = "1.1"
url = "2"
walkdir = "2.3.2"

[[bin]]
name = "lv"
path = "src/main.rs"
